--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -40,25 +40,14 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
-
-    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+    implementation 'com.google.firebase:firebase-database'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
-    implementation 'com.google.android.material:material:1.4.0'
     implementation "com.airbnb.android:lottie:4.1.0"
     implementation "com.github.skydoves:colorpickerview:2.2.3"
     implementation 'com.karumi:dexter:6.2.3'
-
-    constraints{
-        implementation('androidx.work:work-runtime:2.7.0') {
-            because '''androidx.work:work-runtime:2.1.0 pulled from play-services-ads
-                   has a bug using PendingIntent without FLAG_IMMUTABLE or
-                   FLAG_MUTABLE and will fail in apps targeting S+.'''
-        }
-    }
 
 }
